--- a/web/css/adminDashboard.css
+++ b/web/css/adminDashboard.css
@@ -14,7 +14,7 @@ body {
 /* Sidebar styles */
 .sidebar {
     width: 250px;
-    background: #2c3e50;
+    background: #25706d;
     color: #ecf0f1;
     padding: 20px;
     display: flex;
