--- a/web/css/employeeDashboard.css
+++ b/web/css/employeeDashboard.css
@@ -21,7 +21,7 @@ body {
 /* Sidebar */
 .sidebar {
     width: 220px;
-    background-color: #1d3557;
+    background-color: #25706d;
     color: white;
     padding: 2rem 1rem;
     flex-shrink: 0;
